crates/test-files/fixtures/compile_errors/call_duplicate_def.fe
contract Foo {
    pub fn __call__() {}

    fn bar() {}

    pub fn __call__() {
        1 + 2
    }

    pub fn __call__() {
        3 + 4
    }
}
